# toy-beam-os

./: .gitignore  JSON_UI_SPEC.md  Makefile  README.md  elm-watch.json  elm.json  index.html
book/: elm.json  index.html
book/src/: Book.elm
book/src/Chapters/: Button.elm  Color.elm  Divider.elm  Font.elm  Icon.elm  MenuBar.elm  Screen.elm  Wallpaper.elm  Window.elm  WindowButton.elm
review/: elm.json
review/src/: ReviewConfig.elm
src/: JsonUI.elm  Main.elm  PID.elm  ScreenManager.elm  XY.elm
src/UI/: Button.elm  Color.elm  Divider.elm  Extra.elm  Icon.elm  MenuBar.elm  Screen.elm  Wallpaper.elm  Window.elm  WindowButton.elm
src/child_processes/cpp_counter/: Makefile  counter.cpp  json_ui.h  json_ui.hpp
src/child_processes/rust_counter/: Cargo.toml
src/child_processes/rust_counter/src/: json_ui.rs  lib.rs
